:sparkles: Ref. 549 -- ZAAKTYPE.toelichting toegevoegd aan API
