# src/swagger2.0.json
@@ -2739,6 +2739,11 @@
                     "type": "string",
                     "minLength": 1
                 },
+                "toelichting": {
+                    "title": "Toelichting",
+                    "description": "Een eventuele toelichting op dit zaaktype, zoals een beschrijving van het procesverloop op de hoofdlijnen.",
+                    "type": "string"
+                },
                 "doorlooptijd": {
                     "title": "Doorlooptijd",
                     "description": "De periode waarbinnen volgens wet- en regelgeving een ZAAK van het ZAAKTYPE afgerond dient te zijn, in kalenderdagen. Specifieer de duur als 'DD 00:00'",
